# PropertyManageSystem

Source/: CMakeLists.txt
Source/Private/Activities/: Activity.cpp  CMakeLists.txt  Complaint.cpp  Evaluate.cpp  Maintain.cpp
Source/Private/Systems/: DispatchSystem.cpp  InteractiveSystem.cpp  PerformanceSystem.cpp  Report.cpp  ReportSystem.cpp  Worker.cpp
Source/Public/: CMakeLists.txt  Public.h
Source/Public/Activities/: Activity.h  Complaint.h  Evaluate.h  Maintain.h
Source/Public/Systems/: DispatchSystem.h  InteractiveSystem.h  PerformanceSystem.h  Report.h  ReportSystem.h  Worker.h
Source/test/: test.cpp  test_NormalWork.h  test_dispatch.h  test_multiDispatch.h  test_multiMaintain.h  test_report.h  test_worker.h
